crates/reinhardt-pages/tests/ui/client_form/fail/server_fn_submit_error_conversion.stderr
error[E0277]: the trait bound `SubmitError: From<ServerFnError>` is not satisfied
  --> tests/ui/client_form/fail/server_fn_submit_error_conversion.rs:5:52
   |
 5 | #[derive(Clone, PartialEq, Serialize, Deserialize, ClientForm)]
   |                                                    ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `From<ServerFnError>` is not implemented for `SubmitError`
      but trait `From<serde_json::Error>` is implemented for it
  --> tests/ui/client_form/fail/server_fn_submit_error_conversion.rs:29:1
   |
29 | impl From<serde_json::Error> for SubmitError {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `serde_json::Error`, found `ServerFnError`
   = note: this error originates in the derive macro `ClientForm` (in Nightly builds, run with -Z macro-backtrace for more info)
